--- a/HelpMyCollaboratorUsesR.html
+++ b/HelpMyCollaboratorUsesR.html
@@ -267,8 +267,7 @@ div.tocify {
 1,2<br><div class="abstract">
 <p class="abstract">Abstract</p>
 <p>This is a concise introduction to using R for reproducible statistical analyses. It is meant to function as a guide and reference work for researchers who start using R and R Markdown or who have not used R or R Markdown for some time.</p>
-<p>This document itself uses R for analyses and it is written in R Markdown. As such, it exemplifies the topics that it discusses. The R Markdown document can be downloaded from <a href="https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd" class="uri">https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd</a>. The PDF version is available at <a href="https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf" class="uri">https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf</a>.</p>
-<!-- https://tinyurl.com/ybremelq -->
+<p>This document itself uses R for analyses and it is written in R Markdown. As such, it exemplifies the topics that it discusses. The R Markdown document can be downloaded from <a href="https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd" class="uri">https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.Rmd</a>. The PDF version is available at <a href="https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf" class="uri">https://wdenooy.github.io/Switch2R/HelpMyCollaboratorUsesR.pdf</a>. <!-- https://tinyurl.com/ybremelq --></p>
 </div>
 
 </div>
@@ -356,8 +355,7 @@ Figure 2.1: Main panels of the RStudio user interface.
 </blockquote>
 <p>Sometimes, you can supply more than one value for an argument. For example, the <code>quantile()</code> function can calculate several quantiles in one go. If you have to specify more than on value, enumerate them within the <code>c()</code> function, which creates a vector or list.</p>
 <p>Below are some examples of commands and the textual output that the <code>summary</code> function sends to the console, which also feature in Figure <a href="#fig:RStudio">2.1</a>. Note that R is case-sensitive: uppercase letters are considered different letters than lowercase letters.</p>
-<pre class="r"><code># Note that this code chunk is not executed (eval = FALSE). Instead, it is shown
-# to the reader (echo=TRUE).
+<pre class="r"><code># Note that this code chunk is not executed (eval = FALSE).
 
 # Copy the student sleep data set (always available in R) to a data object that
 # we can inspect in the environment.
@@ -430,7 +428,8 @@ Figure 2.3: The RStudio dialog for installing packages.
 <p>While installing a package, RStudio may ask: “Do you want to install from sources the package which needs compilation?” As a rule, answer <em>no</em> to this question.</p>
 <p>Note the <em>Install to Library:</em> field. Here you can see where the packages are placed, which is where R looks for them. By default, the directory is named after the version number of R that you are using. As a consequence, updating to a new R version will create a new directory for the packages and R will look for packages in this new directory. Packages installed in the directory for a previous R version are not automatically copied to the new directory. Do this by hand or re-install all packages. Re-installing them has the additional advantage of working with the latest version.</p>
 <p>Installed packages must be loaded in a new R session before they can be used. The code below loads the <code>tidyverse</code> package <span class="citation">(Wickham <a href="#ref-R-tidyverse">2017</a>)</span> and the <code>papaja</code> package <span class="citation">(Aust and Barth <a href="#ref-R-papaja">2019</a>)</span>. The <code>tidyverse</code> package actually loads a set of packages that allow us to handle data in a transparent way. The <code>papaja</code> package offers functions for creating tables and figures that conform to APA6 standards.</p>
-<pre class="r"><code># Load the packages that you need.
+<pre class="r"><code># Load the packages that you need. Not executed here because the packages were
+# loaded in the first code chunk.
 
 # Install the tidyverse package from CRAN (only once!).
 install.packages(&quot;tidyverse&quot;)
@@ -551,7 +550,7 @@ govact_model &lt;- lm(govact ~ posemot + negemot + I(age/10) + ideology,
 <p>Storing the analysis results as a data object is all fine and well, but we want to see the results. We need functions to extract the relevant results. Let us first tabulate the results and plot them afterwards.</p>
 <div id="basic-tabular-results" class="section level3">
 <h3><span class="header-section-number">3.3.1</span> Basic tabular results</h3>
-<p>In general, the <code>summary()</code> function presents the most basic results. For a linear regression model, it tells us the model formula, some statistics for the residuals, the values of the regression coefficients, and model fit statistics (R<sup>2</sup> and an <em>F</em> test).</p>
+<p>In general, the <code>summary()</code> function presents the most basic results. For a linear regression model, it tells us the model formula, some statistics for the residuals, the values of the regression coefficients, and model fit statistics (<em>R</em><sup>2</sup> and an <em>F</em> test).</p>
 <pre class="r"><code># Show a table of regression results as plain text.
 summary(govact_model)</code></pre>
 <pre><code>## 
@@ -754,7 +753,7 @@ kable(govact_tidy2, #the regression coefficients
       booktabs = TRUE #layout with header and bottom lines in PDF output
       )</code></pre>
 <table>
-<caption><span id="tab:unnamed-chunk-4">Table 3.2: </span>Unedited statistical results of the interaction model extracted with tidy() and shown with kable().</caption>
+<caption><span id="tab:broom">Table 3.2: </span>Unedited statistical results of the interaction model extracted with tidy() and shown with kable().</caption>
 <thead>
 <tr class="header">
 <th align="left">term</th>
@@ -2003,7 +2002,7 @@ fit &lt;- lm(y ~ I(variable - mean(dataset$variable, na.rm = TRUE))*anothervaria
 <h2><span class="header-section-number">4.6</span> Regression: Multilevel</h2>
 <p>Multilevel models can be estimated with the the <code>nlme</code> package <span class="citation">(Pinheiro, Bates, and R-core <a href="#ref-R-nlme">2019</a>)</span> or <code>lme4</code> <span class="citation">(Bates et al. <a href="#ref-R-lme4">2019</a>)</span>. The first package allows for autocorrelated or heteroscedastic individual-level errors whereas the second package supports cross-nested random effects.</p>
 <p>In the functions of the <code>nlme</code>package, <code>lme()</code> for linear models and <code>nlme()</code> for non-linear models, the fixed effects of the model are specified with a formula in the usual way. In addition, the <code>random =</code> argument specifies effects that vary at a higher level.</p>
-<p>The functions <code>lmer()</code> and <code>glmer()</code> in the <code>lme4</code> package estimate multilevel models for linear and generalized linear models respectively. Random effects are added to the model formula using a vertical bar (<code>|</code>). For example, <code>(1 | subject)</code> adds random intercepts at the subject level, while <code>(1 + age | subject)</code> adds varying intercepts and varying slopes for age at the subject level as well as a covariance between the random intercepts and slopes. Note that <code>subject</code> must be the name of a variable identifying subjects as higher level units.</p>
+<p>The functions <code>lmer()</code> and <code>glmer()</code> in the <code>lme4</code> package estimate multilevel models for linear and generalized linear models respectively. Random effects are added to the model formula using a vertical bar (<code>|</code>). For example, <code>(1 | subject)</code> adds random intercepts at the subject level, while <code>(1 + age | subject)</code> adds varying intercepts and varying slopes for age at the subject level as well as a covariance between the random intercepts and slopes. Note that <code>subject</code> must be the name of a variable identifying subjects as higher level units. For a discussion of specifiyng more complicated multilevel models, see <a href="https://rpsychologist.com/r-guide-longitudinal-lme-lmer">Using R and lme/lmer to fit different two- and three-level longitudinal models</a> <span class="citation">(Magnusson <a href="#ref-magnussonUsingLmeLmer2015">2015</a>)</span>.</p>
 <p>Non-linear multilevel models, for example, multilevel logistic regression models, are notably hard to estimate. For this type of models, a Bayesian approach with MCMC estimation is usually preferred. The <code>rstanarm</code> package <span class="citation">(Gabry and Goodrich <a href="#ref-R-rstanarm">2019</a>)</span> contains functions that have the same structure and the same type of output as the multilevel functions in the <code>lme4</code> package.</p>
 </div>
 <div id="sem" class="section level2">
@@ -2155,6 +2154,12 @@ new_function_name &lt;- function (argument1, argument2 = 0) {
 <li><p>When you are ready, upload your local version to the repository. First, <em>Commit</em> the changes that you made to the file. This will make Git register a new version of the file and remember the changes that you made. Second, upload (<em>Push</em>) your changed version to the cloud repository (Github).</p></li>
 </ol>
 <p>RStudio also supports another version control software: Subversion.</p>
+</div>
+<div id="conclusion" class="section level2">
+<h2><span class="header-section-number">6.5</span> Conclusion</h2>
+<blockquote>
+<p>Do what you have been doing but do it more transparently and efficiently with R and RMarkdown.</p>
+</blockquote>
 
 </div>
 </div>
@@ -2194,6 +2199,9 @@ new_function_name &lt;- function (argument1, argument2 = 0) {
 </div>
 <div id="ref-R-texreg">
 <p>Leifeld, Philip. 2017. <em>Texreg: Conversion of R Regression Output to Latex or Html Tables</em>. <a href="https://CRAN.R-project.org/package=texreg" class="uri">https://CRAN.R-project.org/package=texreg</a>.</p>
+</div>
+<div id="ref-magnussonUsingLmeLmer2015">
+<p>Magnusson, Kristoffer. 2015. “Using R and Lme/Lmer to Fit Different Two- and Three-Level Longitudinal Models - R Psychologist.” <em>R Psychologist</em>.</p>
 </div>
 <div id="ref-oomsJsonlitePackagePractical2014">
 <p>Ooms, Jeroen. 2014. “The Jsonlite Package: A Practical and Consistent Mapping Between JSON Data and R Objects.” <em>arXiv:1403.2805 [Cs, Stat]</em>, March. <a href="http://arxiv.org/abs/1403.2805" class="uri">http://arxiv.org/abs/1403.2805</a>.</p>
